# GeoJiang

./: .gitignore  CMakeLists.txt  README.md  setting.ini
include/: clapack.h
parameters/: VDW.parameters  bend.parameters  stretching.parameters  torsion.parameters
src/: atomType.cpp  atomType.h  const.h  forceField.cpp  forceField.h  hessian.cpp  hessian.h  internal.cpp  internal.h  main.cpp  mathj.cpp  mathj.h  molecule.cpp  molecule.h
test/: test_matrix.cpp
